# lamarzocco

./: .gitignore  ACKNOWLEDGEMENTS.md  CODE_OF_CONDUCT.md  NOTICE  PUBLISHING.md  README.md  SECURITY.md  TODO.MD  bt_poc_app.py  bt_poc_index.html  bt_poc_worker.py  run_bt_poc.sh  setup.cfg
.githooks/: pre-push
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
docs/controller/: CLOUD_DASHBOARD_DEBUG.md  FIRMWARE_ARCHITECTURE.md  FLASHING_CONTROLLER.md  JC3636K718.md  OFFLINE_BLE_ONBOARDING.md  SCREENSHOTS.md  SETUP_GUIDE.md  SHOT_TIMER_WEBSOCKET_NOTES.md  VENDOR_ASSETS.md
firmware/esp32/: CMakeLists.txt  README.md  dev.sh  partitions.csv  sdkconfig.defaults
firmware/esp32/main/: CMakeLists.txt  app_main.c  board_backlight.c  board_backlight.h  board_config.h  board_display.c  board_display.h  board_haptic.c  board_haptic.h  board_leds.c  board_leds.h  board_power.c  board_power.h  cloud_api.c  cloud_api.h  cloud_auth.c  cloud_auth_internal.h  cloud_dashboard.c  cloud_live_updates.c  cloud_live_updates.h  cloud_machine_api.c  cloud_machine_selection.c  cloud_machine_selection.h  cloud_machine_status.h  cloud_session.c  cloud_session.h  controller_connectivity.c  controller_connectivity.h  controller_heat_session.c  controller_heat_session.h  controller_runtime.c  controller_runtime.h  controller_settings.c  controller_settings.h  controller_shot_timer.c  controller_shot_timer.h  controller_state.c  controller_state.h  controller_ui.c  controller_ui.h  (+33 more)
firmware/esp32/main/fonts/: lm_ctrl_font_montserrat_14.c  lm_ctrl_font_montserrat_16.c  lm_ctrl_font_montserrat_20.c  lm_ctrl_font_montserrat_28.c  lm_ctrl_font_montserrat_40.c
firmware/esp32/tests/host/: run.sh
firmware/esp32/tests/host/include/: esp_check.h  esp_crt_bundle.h  esp_err.h  esp_hmac.h  esp_http_client.h  esp_http_server.h  esp_log.h  esp_lv_adapter.h  esp_netif.h  esp_websocket_client.h  esp_wifi.h  lvgl.h  nvs.h  nvs_flash.h  nvs_sec_provider.h  test_httpd.h  test_nvs.h  test_psa.h  test_support.h
firmware/esp32/tests/host/include/freertos/: FreeRTOS.h  semphr.h
firmware/esp32/tests/host/src/: test_cloud_api.c  test_cloud_machine_selection.c  test_controller_connectivity.c  test_controller_heat_session.c  test_controller_settings.c  test_controller_shot_timer.c  test_controller_state.c  test_httpd.c  test_idf_stubs.c  test_machine_link_policy.c  test_nvs.c  test_runner.c  test_setup_portal_page.c  test_setup_portal_routes.c  test_storage_security.c  test_wifi_reconnect_policy.c
tools/controller_screenshot_renderer/: .gitignore  Makefile  controller_setup_portal_preview.html  lv_conf.h  renderer.c  stubs.c  stubs.h
tools/controller_screenshot_renderer/include/: esp_err.h
tools/debug/: cloud_dashboard_debug.py  run_cloud_dashboard_debug.sh
(+7 files in other folders)
