idf_component_register(
  SRCS
    "app_main.c"
    "board_backlight.c"
    "board_display.c"
    "board_haptic.c"
    "board_leds.c"
    "cloud_api.c"
    "cloud_auth.c"
    "cloud_dashboard.c"
    "cloud_live_updates.c"
    "cloud_machine_selection.c"
    "cloud_machine_api.c"
    "cloud_session.c"
    "controller_settings.c"
    "controller_runtime.c"
    "controller_state.c"
    "controller_ui.c"
    "input.c"
    "machine_link.c"
    "machine_link_ble.c"
    "machine_link_cloud.c"
    "machine_link_policy.c"
    "setup_portal_http.c"
    "setup_portal_page.c"
    "setup_portal_presenter.c"
    "setup_portal_routes.c"
    "setup_portal_routes_shared.c"
    "wifi_setup.c"
  INCLUDE_DIRS
    "."
  REQUIRES
    bt
    mdns
    led_strip
    esp_http_client
    esp_driver_ledc
    esp_driver_rmt
    esp_event
    esp_http_server
    esp_netif
    esp_wifi
    mbedtls
    nvs_flash
)
