idf_component_register(
  SRCS
    "app_main.c"
    "board_backlight.c"
    "board_display.c"
    "board_haptic.c"
    "board_leds.c"
    "board_power.c"
    "cloud_api.c"
    "cloud_auth.c"
    "cloud_dashboard.c"
    "cloud_live_updates.c"
    "cloud_machine_selection.c"
    "cloud_machine_api.c"
    "cloud_session.c"
    "controller_settings.c"
    "controller_runtime.c"
    "controller_state.c"
    "controller_connectivity.c"
    "controller_ui.c"
    "controller_shot_timer.c"
    "fonts/lm_ctrl_font_montserrat_14.c"
    "fonts/lm_ctrl_font_montserrat_16.c"
    "fonts/lm_ctrl_font_montserrat_20.c"
    "fonts/lm_ctrl_font_montserrat_28.c"
    "fonts/lm_ctrl_font_montserrat_40.c"
    "input.c"
    "machine_link.c"
    "machine_link_ble.c"
    "machine_link_cloud.c"
    "machine_link_policy.c"
    "setup_portal_http.c"
    "setup_portal_page.c"
    "setup_portal_presenter.c"
    "setup_portal_routes.c"
    "setup_portal_routes_shared.c"
    "storage_security.c"
    "wifi_setup.c"
  INCLUDE_DIRS
    "."
  REQUIRES
    bt
    mdns
    led_strip
    esp_adc
    esp_driver_usb_serial_jtag
    esp_http_client
    esp_driver_ledc
    esp_driver_rmt
    esp_event
    esp_http_server
    esp_netif
    esp_wifi
    mbedtls
    nvs_flash
    nvs_sec_provider
)
